Give both .background and .heading a position of relative and ensure they are on top of the vertical lines by giving it a greater z-index value

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ html {
   --color-5: #6b7280;
 }
 
+.background, .heading {
+    position: relative;
+    z-index: 1;
+}
+
 .content {
     display: flex;
     flex-wrap: wrap;
